--- a/DatingApp4-API/src/app/app.component.html
+++ b/DatingApp4-API/src/app/app.component.html
@@ -1,10 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div >
-  <h1>
-   DatingApp
-  </h1>
-  <app-value></app-value>
-</div>
+<app-navbar></app-navbar>
+<app-home></app-home>
+
 
 
 <!-- <router-outlet></router-outlet> -->
