--- a/DatingApp4-API/src/app/app.component.html
+++ b/DatingApp4-API/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-navbar></app-navbar>
-<app-home></app-home><br><br>
-
+<router-outlet></router-outlet>
 
 
 <!-- <router-outlet></router-outlet> -->
