--- a/DatingApp4-API/src/app/navbar/navbar.component.html
+++ b/DatingApp4-API/src/app/navbar/navbar.component.html
@@ -8,16 +8,16 @@
 
     <ul *ngIf="LoggedIn()" class="navbar-nav mr-auto">
 
-      <li class="nav-item  activ">
-        <a class="nav-link" href="#">Matches</a>
+      <li class="nav-item"  routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/members']"  >Matches</a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
+      <li class="nav-item" routerLinkActive="active" >
+        <a class="nav-link" [routerLink]="['/lists']" >Lists</a>
       </li>
 
-      <li class="nav-item ">
-        <a class="nav-link">
+      <li class="nav-item "routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/messages']" r >
           Messages
         </a>
       </li>
