--- a/DatingApp4-API/src/app/navbar/navbar.component.html
+++ b/DatingApp4-API/src/app/navbar/navbar.component.html
@@ -1,49 +1,46 @@
 <nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
-  <div class="container">
-    <a class="navbar-brand" href="#">DatingApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container">
+        <a class="navbar-brand" href="#">DatingApp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <ul *ngIf="LoggedIn()" class="navbar-nav mr-auto">
+        <ul *ngIf="LoggedIn()" class="navbar-nav mr-auto">
 
-      <li class="nav-item"  routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/members']"  >Matches</a>
-      </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/members']">Matches</a>
+            </li>
 
-      <li class="nav-item" routerLinkActive="active" >
-        <a class="nav-link" [routerLink]="['/lists']" >Lists</a>
-      </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/lists']">Lists</a>
+            </li>
 
-      <li class="nav-item "routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/messages']" r >
+            <li class="nav-item " routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/messages']" r>
           Messages
         </a>
-      </li>
+            </li>
 
-    </ul>
+        </ul>
 
-    <div *ngIf="LoggedIn()" dropdown class="dropdown text-light">
-      <a class="dropdown-toggle" dropdownToggle>
+        <div *ngIf="LoggedIn()" dropdown class="dropdown text-light">
+            <a class="dropdown-toggle" dropdownToggle>
         Welcome {{authService.tokenDecoded?.unique_name}}
       </a>
-      <div class="dropdown-menu" *dropdownMenu>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
+            <div class="dropdown-menu" *dropdownMenu>
+                <a class="dropdown-item" [routerLink]="['member/edit']"> <i class="fa fa-user"></i> Edit Profile</a>
 
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="Lougout()"> <i class="fa fa-sign-out"></i> Logout</a>
-      </div>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" (click)="Lougout()"> <i class="fa fa-sign-out"></i> Logout</a>
+            </div>
 
+        </div>
+
+
+        <form *ngIf="!LoggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="Login()">
+            <input class="form-control mr-sm-2" type="text" name="username" required placeholder="UserName" [(ngModel)]="model.username">
+            <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password" [(ngModel)]="model.password">
+            <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+        </form>
     </div>
-
-
-    <form *ngIf="!LoggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="Login()">
-      <input class="form-control mr-sm-2" type="text" name="username" required placeholder="UserName"
-        [(ngModel)]="model.username">
-      <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password"
-        [(ngModel)]="model.password">
-      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-    </form>
-  </div>
 </nav>
