--- a/DatingApp4-API/src/app/navbar/navbar.component.html
+++ b/DatingApp4-API/src/app/navbar/navbar.component.html
@@ -25,7 +25,7 @@
 
         <div *ngIf="LoggedIn()" dropdown class="dropdown text-light">
             <span class="mr-1">
-            <img src="{{photoUrl || '../../../../assets/user.png" alt="">
+            <img src="{{photoUrl || '../../../../assets/user.png'}}" alt="">
           </span>
             <span class="dropdown-toggle" dropdownToggle>
         Welcome {{authService.tokenDecoded?.unique_name}}
